# 3DSceneCreator

./: .gitignore  3dSceneCreator.pro  CMakeLists.txt  README.md  template.pro
ressources/: fshader.glsl  shaders.qrc  vshader.glsl
ressources/skybox/: fshaderSkybox.glsl  vshaderSkybox.glsl
src/: Camera.cpp  Camera.h  ChewToyModel.cpp  ChewToyModel.h  GeometryEngine.cpp  GeometryEngine.h  MainWidget.cpp  MainWidget.h  MainWindow.cpp  MainWindow.h  ModelVertex.cpp  ModelVertex.h  Skybox.cpp  Skybox.h  geometry.h  geometryengine.cpp  geometryengine.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  objreader.h
ui/: mainwindow.ui
